--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,38 @@
 /boot/ocamlrun
 /boot/ocamlyacc
 /config/Makefile
+/bytecomp/opcodes.ml
+/bytecomp/runtimedef.ml
+/byterun/jumptbl.h
+/byterun/ocamlrun
+/byterun/ocamlrund
+/byterun/opnames.h
+/byterun/primitives
+/byterun/prims.c
+/config/m.h
+/config/s.h
+/debugger/lexer.ml
+/debugger/ocamldebug
+/debugger/parser.ml
+/debugger/parser.mli
+/lex/lexer.ml
+/lex/ocamllex
+/lex/parser.ml
+/lex/parser.mli
+/ocaml
+/ocamlc
+/expunge
+/otherlibs/dynlink/extract_crc
+/otherlibs/str/regex-0.12/Makefile
+/otherlibs/str/regex-0.12/config.status
+/otherlibs/threads/pervasives.mli
+/parsing/lexer.ml
+/parsing/linenum.ml
+/parsing/parser.ml
+/parsing/parser.mli
+/stdlib/camlheader
+/tools/ocamldep
+/tools/ocamldep.ml
+/tools/ocamlprof
+/utils/config.ml
+/yacc/ocamlyacc
