* Makefile: add estet, and try compile with recent ocamlc! so can get better warnings, and can run codegraph and scheck! to remove deadcode

--- a/stdlib/Makefile
+++ b/stdlib/Makefile
@@ -1,9 +1,10 @@
 include ../config/Makefile
 
-RUNTIME=../boot/ocamlrun
-COMPILER=../ocamlc
+#RUNTIME=../boot/ocamlrun
+#COMPILER=../ocamlc
+COMPILER=/home/pad/.opam/4.01.0/bin/ocamlc
 CAMLC=$(RUNTIME) $(COMPILER)
-COMPFLAGS=-g
+COMPFLAGS=-g  -bin-annot
 OPTCOMPILER=../ocamlopt
 CAMLOPT=$(RUNTIME) $(OPTCOMPILER)
 OPTCOMPFLAGS=
