--- a/docs/latex/Makefile.common
+++ b/docs/latex/Makefile.common
@@ -3,8 +3,8 @@
 # Generic Literate programming variables
 ##############################################################################
 
-SYNCFLAGS=-md5sum_in_auxfile -less_marks -lang ocaml
-#SYNCFLAGS=-less_marks -lang C
+LANG=ocaml
+SYNCFLAGS=-md5sum_in_auxfile -less_marks -lang $(LANG)
 
 # .opt
 SYNCWEB=~/github/syncweb/syncweb.opt $(SYNCFLAGS)
@@ -22,7 +22,7 @@ clean::
 	rm -f *.aux *.toc *.log *.brf *.out
 
 
-sync:
+sync::
 	for i in $(SRC_VIEWS); do echo $$i; $(SYNCWEB) $(SRC_ORIG) $$i || exit 1; done 
 
 pdf:
