--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,17 +3,18 @@ OCAML=../boot/ocamlrun ../boot/ocamlc -I ../stdlib
 OCAMLOPT=../boot/ocamlrun ../ocamlopt -I ../stdlib
 OCAMLRUN=../boot/ocamlrun
 
-hello: hello.ml
-	$(OCAML) hello.ml
+hello.byte: hello.ml
+	$(OCAML) hello.ml -o hello.byte
 
-opt: hello.ml
+hello.opt: hello.ml
 	$(OCAMLOPT) hello.ml -o hello.opt
 
 
 run:
-	$(OCAMLRUN) ./a.out
+	$(OCAMLRUN) ./hello.byte
 
 clean:
-	rm -f *.cm*
-	rm -f a.out
+	rm -f *.cm* *.o
+	rm -f *.byte *.opt 
+
 
