* tools/misc/Makefile: do not remove ocamldep

--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -18,8 +18,9 @@ CAMLDEP=ocamldep.cmo
 ocamldep: $(CAMLDEP)
 	$(CAMLC) $(LINKFLAGS) -o ocamldep misc.cmo $(CAMLDEP)
 
-clean::
-	rm -f ocamldep
+#pad: better not deleting it
+#clean::
+#	rm -f ocamldep
 
 ocamldep.ml: ocamldep.mll
 	$(CAMLLEX) ocamldep.mll
