--- a/stdlib/Makefile
+++ b/stdlib/Makefile
@@ -9,7 +9,7 @@ COMPFLAGS=-g
 OPTCOMPILER=../ocamlopt
 CAMLOPT=$(RUNTIME) $(OPTCOMPILER)
 OPTCOMPFLAGS=
-CAMLDEP=../boot/ocamlrun ../tools/ocamldep
+CAMLDEP=../boot/ocamlrun ../tools/misc/ocamldep
 
 OBJS=pervasives.cmo list.cmo char.cmo string.cmo array.cmo sys.cmo \
   hashtbl.cmo sort.cmo filename.cmo marshal.cmo obj.cmo \
@@ -17,7 +17,8 @@ OBJS=pervasives.cmo list.cmo char.cmo string.cmo array.cmo sys.cmo \
   set.cmo map.cmo stack.cmo queue.cmo stream.cmo \
   printf.cmo format.cmo arg.cmo printexc.cmo gc.cmo \
   digest.cmo random.cmo genlex.cmo callback.cmo weak.cmo \
-  lazy.cmo
+  lazy.cmo \
+  buffer.cmo
 
 all: stdlib.cma std_exit.cmo camlheader
 
