* tests/test_gc.ml:

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,8 +3,9 @@ OCAMLC=../byterun/ocamlrun ../ocamlc -g -I ../stdlib
 OCAMLOPT=../byterun/ocamlrun ../ocamlopt -I ../stdlib
 OCAMLRUN=../byterun/ocamlrun
 
-all: hello.byte backtrace.byte
+all: hello.byte backtrace.byte test_gc.byte
 
+# special case, to illustrate
 hello.byte: hello.ml
 	$(OCAMLC) hello.ml -o hello.byte
 
