* tests/calc/ fix, works on toy example

--- a/tests/calc/Makefile
+++ b/tests/calc/Makefile
@@ -1,23 +1,18 @@
-
 TOP=../..
 
 OCAMLRUN=$(TOP)/byterun/ocamlrun
 OCAMLC=$(OCAMLRUN) $(TOP)/ocamlc -g -I $(TOP)/stdlib
+OCAMLLEX=$(OCAMLRUN) $(TOP)/lex/ocamllex
 
 all: calc.byte
 
 calc.byte: ast.cmo eval.cmo parser.cmo lexer.cmo main.cmo
 	$(OCAMLC) -o $@ $^
 
-
 lexer.ml: lexer.mll
-	$(OCAMLRUN) $(TOP)/lex/ocamllex $^
-
+	$(OCAMLLEX) $^
 parser.ml parser.mli: parser.mly
 	$(TOP)/yacc/ocamlyacc $^
-
-parser.cmo: parser.cmi
-
 
 %.cmi: %.mli
 	$(OCAMLC) -c $<
@@ -29,4 +24,5 @@ parser.cmo: parser.cmi
 clean:
 	rm -f *.cm* lexer.ml parser.mli parser.ml *.byte
 
-
+# manual dependencies
+parser.cmo: parser.cmi
