more gitignore for syncweb

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ asmrun/*.c
 # syncweb object files
 .md5sum_*
 
+# other syncweb/literate stuff
+/docs/literate/.OCaml.nwcache
+/docs/literate/OCaml-2.pdf
+/docs/literate/OCaml-3.pdf
+/docs/literate/defs_and_uses.list
+/docs/literate/lineage.pdf
+
 # patch -p1 < ...
 *.rej
 
