delete back lex/dune, does not work yet

--- a/stdlib/dune
+++ b/stdlib/dune
@@ -4,12 +4,12 @@
  ; -nopervasives -nostdlib
  (flags (:standard -unsafe-string))
  (modules
-   stack set
+   set map
+   stack sort
    lexing parsing
  )
 
  (libraries
-
 
   )
  
