use set -e in toplevel Makefile so errors in subdir crash whole thing
and comment tools/debugger in Makefile for now which does not compile

--- a/tools/profiler/Makefile
+++ b/tools/profiler/Makefile
@@ -44,7 +44,9 @@ clean::
 clean::
 	rm -f *.cmo *.cmi
 
+beforedepend:
+
 depend: beforedepend
-	$(CAMLRUN) ./ocamldep $(INCLUDES) *.mli *.ml > .depend
+	$(CAMLRUN) ../dependencies/ocamldep $(INCLUDES) *.mli *.ml > .depend
 
 include .depend
