--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Cache Nix
         uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Build Nix shell
-        run: make shell
+        run: nix-shell --pure
       - name: Build XiX using Nix
         run: |
           #coupling: Dockerfile
