--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -28,6 +28,8 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Build Nix shell
         run: nix-shell --pure
+      # we don't run 'make install' below to test this target because
+      # Nix will prevent access to /usr/local/bin
       - name: Build XiX using Nix
         run: |
           #coupling: Dockerfile
@@ -36,5 +38,4 @@ jobs:
             make coldstart
             make world
             make test
-            make install
           '
