--- a/test/Makefile
+++ b/test/Makefile
@@ -9,10 +9,13 @@ CAMLDEP=../boot/ocamlrun ../tools/ocamldep
 CAMLRUN=../byterun/ocamlrun
 CODERUNPARAMS=CAMLRUNPARAM='o=100'
 
-# TODO: boyer.byt "double free or corruption" when run in CI, weird
+# TODO:
+# - boyer.byt "double free or corruption" when run in CI, weird
+# - nucleic.byt "munmap_chunk(): invalid pointer"
+
 BYTE_EXE=fib.byt takc.byt taku.byt sieve.byt quicksort.byt quicksort.fast.byt \
   fft.byt fft.fast.byt soli.byt soli.fast.byt kb.byt \
-  nucleic.byt genlex.byt bdd.byt
+  genlex.byt bdd.byt
 
 CODE_EXE=$(BYTE_EXE:.byt=.out)
 
