--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -37,8 +37,5 @@ jobs:
             ./configure
             make coldstart
             make world
-            # TODO: some weird memory error for boyer.byt nucleic.byt sieve.byt
-            # so I've removed them
-            #coupling: test/Makefile BYTE_EXE variable
-            BYTE_EXE="fib.byt takc.byt taku.byt sieve.byt quicksort.byt quicksort.fast.byt fft.byt fft.fast.byt soli.byt soli.fast.byt boyer.byt kb.byt genlex.byt bdd.byt" make test
+            make nix-test
           '
