--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -14,7 +14,7 @@ default:
 ##############################################################################
 
 %.byt: %.ml
-	$(OCAMLC) $^ -o $@
+	$(OCAMLC) $^ -custom -o $@
 
 %.cmo: %.ml
 	$(OCAMLC) -c $^
